--- a/README
+++ b/README
@@ -1,10 +1,25 @@
 TODO:
-    - ω segfaults
+    - ω segfaults (with a collossal stack of ~35k frames)
     - lhs/rhs reduction order can be changed to reduce wasted steps?
+        For alpha only reduce when required: https://en.wikipedia.org/wiki/Lambda_calculus#Capture-avoiding_substitutions
+        For beta reduce anything about to be substituted first
+        Do this to such an extent that each line of :debug output is a useful
+            transformation, use to make seperate :trace command. :trace would be
+            invaluable if a bug is discovered in reduction.
 
 Test:
     - (((\x.(\y.(x (x y)))) (\x.y)) z) => y
+    - ((\x.(x y)) (\x.x)) => y
     - ((λf.f) (λf.(f f))) => (λf.(f f))
+    - (((\x.(\y.(\f.((f x) y)))) a) b) => (λ4.((4 a) b))
+    - ((\x.(x (\y.(\z.y)))) (((\x.(\y.(\f.((f x) y)))) a) b)) => a
+    - ((\x.(x (\y.(\z.z)))) (((\x.(\y.(\f.((f x) y)))) a) b)) => b
+
+Useful Terms:
+    Name        Usage           Term
+    - Pair      ((P x) y)       (\x.(\y.(\f.((f x) y))))
+    - First     (F ((P x) y))   (\p.(p (\x.(\y.x))))
+    - Second    (S ((P x) y))   (\p.(p (\x.(\y.y))))
 
 Usage:
     - Enter one term, press enter for it to be reduced.
@@ -23,7 +38,8 @@ The following are not lambda terms but are recognised by the REPL:
     :debug      This toggles debug mode. Debug mode prints reduction information
 
 Sugar:
-    None at present.
+    None at present. Will implement sugar for all above useful terms, and
+    currying.
 
 Present features implemented:
     - α-Reduction
@@ -31,13 +47,18 @@ Present features implemented:
     - Debug mode
 
 Planned features:
+    - cons, car, cdr, map, fold
     - No stack-depth limit, rather the limit is the available memory.
         - See Application::betaReduce recursively β-reducing the lhs and rhs
         - Walk the AST without recursion
     - Line editing and history, maybe via GNU readline
-    - Sugar currying to accept λx y.(y x)
-    - Sugar equivilent to LISPs let
+    - Sugar currying to accept (λx y.(y x))
+    - Church numerals
+    - successor/predessessor
+    - +/-
+    - *//
     - Recursion via Y-Combinator
+    - Sugar equivilent to LISPs let
 
 Limits:
     2^64 variables IDs, aborts on exceeding this limit
